jena-shex/src/test/files/spec/negativeSyntax/STRING_LITERAL_LONG2-unterminated.shex
# STRING_LITERAL_LONG2 not terminated
# source: turtle-syntax-bad-string-05.ttl
<http://a.example/IssueShape> {
   <http://a.example/p1> ["""abc
def
